feat: added mobile slider

--- a/travel/index.html
+++ b/travel/index.html
@@ -53,7 +53,7 @@
                         <input type="text" class="popup__input">
                         <p class="popup__input-text">Password</p>
                         <input type="text" class="popup__input">
-                        <button class="popup__button popup__button-darkblue">Sign In</button>
+                        <button class="popup__button popup__button-darkblue sign">Sign In</button>
                         <a href="#" class="popup__href">Forgot Your Password?</a>
                         <hr class="popup__hr">
                         <p class="popup__href-text">Don’t have an account? <a href="#" class="popup__href">Register</a>
@@ -66,10 +66,10 @@
                         <h1 class="popup__title">Create account</h1>
                         <p class="popup__text"></p>
                         <p class="popup__input-text">E-mail</p>
-                        <input type="text" class="popup__input">
+                        <input type="text" class="popup__input email">
                         <p class="popup__input-text">Password</p>
-                        <input type="text" class="popup__input">
-                        <button class="popup__button popup__button-darkblue">Sign Up</button>
+                        <input type="text" class="popup__input password">
+                        <button class="popup__button popup__button-darkblue sign">Sign Up</button>
                         <hr class="popup__hr">
                         <p class="popup__href-text">Already have an account? <a href="#" class="popup__href">Log in</a>
                         </p>
@@ -139,24 +139,21 @@
                     </div>
                 </div>
                 <div class="destinations__slider-mobile">
-                    <img class="destinations__arrow-left" src="images/vector-left.svg" alt="arrow-left">
+                    <img class="destinations__arrow-left" src="images/Vector-right.svg" alt="arrow-left">
                     <img class="destinations__arrow-right" src="images/Vector-right.svg" alt="arrow-right">
-                    <div class="destinations__slide-mobile">
+                    <div class="destinations__slide-mobile slide">
                         <img class="destinations__img-mobile" src="images/island-mobile.jpg" alt="Spain">
                         <p class="destinations__text-mobile"><span>Spain</span></p>
                     </div>
-                    <div class="destinations__slide-mobile">
+                    <div class="destinations__slide-mobile slide">
                         <img class="destinations__img-mobile" src="images/japan-mobile.jpg" alt="Japan">
                         <p class="destinations__text-mobile"><span>Japan</span></p>
                     </div>
-                    <div class="destinations__slide-mobile">
+                    <div class="destinations__slide-mobile slide">
                         <img class="destinations__img-mobile" src="images/usa-mobile.jpg" alt="USA">
                         <p class="destinations__text-mobile"><span>USA</span></p>
                     </div>
                     <div class="destinations__dots-mobile">
-                        <button class=" dot-mobile--active dot-mobile "></button>
-                        <button class="dot-mobile"></button>
-                        <button class="dot-mobile"></button>
                     </div>
                 </div>
                 <div class="destinations__button">
