feat: added popup login

--- a/travel/index.html
+++ b/travel/index.html
@@ -50,18 +50,18 @@
                         <p class="popup__line">or</p>
                         <p class="popup__text"></p>
                         <p class="popup__input-text">E-mail</p>
-                        <input type="text" class="popup__input">
+                        <input type="text" class="popup__input" required/>
                         <p class="popup__input-text">Password</p>
-                        <input type="text" class="popup__input">
+                        <input type="text" class="popup__input" required/>
                         <button class="popup__button popup__button-darkblue sign">Sign In</button>
                         <a href="#" class="popup__href">Forgot Your Password?</a>
                         <hr class="popup__hr">
-                        <p class="popup__href-text">Don’t have an account? <a href="#" class="popup__href">Register</a>
+                        <p class="popup__href-text">Don’t have an account? <a href="#" class="popup__href register">Register</a>
                         </p>
                     </div>
                 </div>
                 <div class="overlay hidden"></div>
-                <div class="popup signup__popup">
+                <div class="popup signup__popup hidden">
                     <div class="popup__wrapper">
                         <h1 class="popup__title">Create account</h1>
                         <p class="popup__text"></p>
@@ -71,7 +71,7 @@
                         <input type="text" class="popup__input password">
                         <button class="popup__button popup__button-darkblue sign">Sign Up</button>
                         <hr class="popup__hr">
-                        <p class="popup__href-text">Already have an account? <a href="#" class="popup__href">Log in</a>
+                        <p class="popup__href-text">Already have an account? <a href="#" class="popup__href login">Log in</a>
                         </p>
                     </div>
                 </div>
