feat:added sign up alert

--- a/travel/index.html
+++ b/travel/index.html
@@ -69,7 +69,7 @@
                         <input type="text" class="popup__input email">
                         <p class="popup__input-text">Password</p>
                         <input type="text" class="popup__input password">
-                        <button class="popup__button popup__button-darkblue sign">Sign Up</button>
+                        <button class="popup__button popup__button-darkblue signUp">Sign Up</button>
                         <hr class="popup__hr">
                         <p class="popup__href-text">Already have an account? <a href="#" class="popup__href login">Log in</a>
                         </p>
